--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/CodedFlames/Small-Mail-Route#readme",
   "dependencies": {
+    "@vitejs/plugin-vue": "^4.2.1",
+    "dotenv": "^16.0.3",
     "hono": "^3.1.6",
     "vite": "^4.3.3",
     "vue": "^3.2.47"
