new updates, home site, routing fixes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
-    "dev_Server": "wrangler dev server/index.ts"
+    "dev-s": "wrangler dev server/index.ts"
   },
   "repository": {
     "type": "git",
